last-check-commit

--- a/company.html
+++ b/company.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>九州機械開発株式会社｜会社概要</title>
+    <meta name="title" content="九州機械開発株式会社｜会社概要" />
+    <meta
+      name="description"
+      content="九州機械開発株式会社は平成21年8月19日に設立しました。農畜産業・建設土木業・流通業界に従事する全ての人のため、鹿児島県鹿児島市東開町を拠点として活動しております。建設機械販売を中心に、出張修理や特定自主検査を行っております。"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="九州機械開発株式会社｜会社概要" />
+    <meta
+      property="og:description"
+      content="九州機械開発株式会社は平成21年8月19日に設立しました。農畜産業・建設土木業・流通業界に従事する全ての人のため、鹿児島県鹿児島市東開町を拠点として活動しております。建設機械販売を中心に、出張修理や特定自主検査を行っております。"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="九州機械開発株式会社｜会社概要" />
+    <meta
+      property="twitter:description"
+      content="九州機械開発株式会社は平成21年8月19日に設立しました。農畜産業・建設土木業・流通業界に従事する全ての人のため、鹿児島県鹿児島市東開町を拠点として活動しております。建設機械販売を中心に、出張修理や特定自主検査を行っております。"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
     <link rel="stylesheet" href="./common/style/reset.css" />
     <link rel="stylesheet" href="./common/style/common.css" />
     <link rel="stylesheet" href="./common/style/company.css" />
-    <title>九州機械開発 株式会社</title>
+    <link rel="icon" href="./common/img/favicon.ico" />
   </head>
   <body>
     <header class="header">
@@ -41,12 +74,14 @@
         <nav class="global-nav">
           <ul class="global-nav__list">
             <li class="global-nav__item">
-              <a href="./index.html">ホーム</a></li>
+              <a href="./index.html">ホーム</a>
+            </li>
             <li class="global-nav__item">
               <a href="./service.html">事業内容</a>
             </li>
             <li class="global-nav__item">
-              <a href="./news.html">新着情報</a></li>
+              <a href="./news.html">新着情報</a>
+            </li>
             <li class="global-nav__item">
               <a href="#">会社概要</a>
             </li>
@@ -84,22 +119,31 @@
               </tr>
               <tr>
                 <th>所在地</th>
-                <td>鹿児島県鹿児島市東開町4-83</td>
+                <td>鹿児島県鹿児島市東開町字東海4番地83</td>
               </tr>
               <tr>
                 <th>設立</th>
-                <td>平成元年1月1日</td>
+                <td>平成21年8月19日</td>
               </tr>
               <tr>
                 <th>従業員数</th>
-                <td>4名</td>
+                <td>2名</td>
               </tr>
               <tr>
                 <th>資本金</th>
-                <td>1000万円</td>
+                <td>100万円</td>
               </tr>
             </table>
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4430.615672794504!2d130.5341790496288!3d31.53183568199115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x353e66bcd30ddedb%3A0x70b18502a8d80012!2z44CSODkxLTAxMTUg6bm_5YWQ5bO255yM6bm_5YWQ5bO25biC5p2x6ZaL55S677yU4oiS77yY77yT!5e0!3m2!1sja!2sjp!4v1648224085584!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+              class="map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4430.615672794504!2d130.5341790496288!3d31.53183568199115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x353e66bcd30ddedb%3A0x70b18502a8d80012!2z44CSODkxLTAxMTUg6bm_5YWQ5bO255yM6bm_5YWQ5bO25biC5p2x6ZaL55S677yU4oiS77yY77yT!5e0!3m2!1sja!2sjp!4v1648224085584!5m2!1sja!2sjp"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </section>
         </div>
         <section id="contact">
