--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>九州機械開発株式会社｜お問い合わせ</title>
+    <meta name="title" content="九州機械開発株式会社｜お問い合わせ" />
+    <meta
+      name="description"
+      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="九州機械開発株式会社｜お問い合わせ" />
+    <meta
+      property="og:description"
+      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta
+      property="twitter:title"
+      content="九州機械開発株式会社｜お問い合わせ"
+    />
+    <meta
+      property="twitter:description"
+      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
     <link rel="stylesheet" href="./common/style/reset.css" />
     <link rel="stylesheet" href="./common/style/common.css" />
     <link rel="stylesheet" href="./common/style/contact.css" />
-    <title>九州機械開発 株式会社</title>
+    <link rel="icon" href="./common/img/favicon.ico">
   </head>
   <body>
     <header class="header">
@@ -41,12 +77,14 @@
         <nav class="global-nav">
           <ul class="global-nav__list">
             <li class="global-nav__item">
-              <a href="./index.html">ホーム</a></li>
+              <a href="./index.html">ホーム</a>
+            </li>
             <li class="global-nav__item">
               <a href="./service.html">事業内容</a>
             </li>
             <li class="global-nav__item">
-              <a href="./news.html">新着情報</a></li>
+              <a href="./news.html">新着情報</a>
+            </li>
             <li class="global-nav__item">
               <a href="./company.html">会社概要</a>
             </li>
@@ -71,7 +109,7 @@
         <div class="top_wrapper">
           <h2 class="page_title">お問い合わせ</h2>
         </div>
-        <div class="wrapper">
+        <!-- <div class="wrapper">
           <section id="contact_form">
             <form class="contact_form" action="index.html" method="post">
               <div class="contact_form_item">
@@ -93,7 +131,16 @@
               <button class="btn" onclick="location.href='./thanks.html'">送信する</button>
             </form>
           </section>
-        </div>
+        </div> -->
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLSe-MszLu3p8sW2WlPdm0QD4C1A4cPYs1WdX_GLVqDNGGix5Yg/viewform?embedded=true"
+          width="100%"
+          height="1050px"
+          frameborder="0"
+          margin-height="0"
+          margin-width="0"
+          >読み込んでいます…</iframe
+        >
       </article>
     </main>
     <footer class="footer">
