--- a/repair.html
+++ b/repair.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>九州機械開発株式会社｜特定自主検査</title>
+    <meta name="title" content="九州機械開発株式会社｜特定自主検査" />
+    <meta
+      name="description"
+      content="特定自主検査とは、建設機械、荷役運搬機械、高所作業車など、労働安全衛生法により特定自主検査が義務付けられております。検査は法令で定められた資格を有する検査者が、各機械ごとに定められた検査事項について実施して特定自主検査記録表へ記録・保管することになっています。"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="九州機械開発株式会社｜特定自主検査" />
+    <meta
+      property="og:description"
+      content="特定自主検査とは、建設機械、荷役運搬機械、高所作業車など、労働安全衛生法により特定自主検査が義務付けられております。検査は法令で定められた資格を有する検査者が、各機械ごとに定められた検査事項について実施して特定自主検査記録表へ記録・保管することになっています。"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta
+      property="twitter:title"
+      content="九州機械開発株式会社｜特定自主検査"
+    />
+    <meta
+      property="twitter:description"
+      content="特定自主検査とは、建設機械、荷役運搬機械、高所作業車など、労働安全衛生法により特定自主検査が義務付けられております。検査は法令で定められた資格を有する検査者が、各機械ごとに定められた検査事項について実施して特定自主検査記録表へ記録・保管することになっています。"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
     <link rel="stylesheet" href="./common/style/reset.css" />
     <link rel="stylesheet" href="./common/style/common.css" />
     <link rel="stylesheet" href="./common/style/repair.css" />
-    <title>九州機械開発 株式会社</title>
+    <link rel="icon" href="./common/img/favicon.ico">
   </head>
   <body>
     <header class="header">
@@ -41,12 +77,14 @@
         <nav class="global-nav">
           <ul class="global-nav__list">
             <li class="global-nav__item">
-              <a href="./index.html">ホーム</a></li>
+              <a href="./index.html">ホーム</a>
+            </li>
             <li class="global-nav__item">
               <a href="./service.html">事業内容</a>
             </li>
             <li class="global-nav__item">
-              <a href="./news.html">新着情報</a></li>
+              <a href="./news.html">新着情報</a>
+            </li>
             <li class="global-nav__item">
               <a href="./company.html">会社概要</a>
             </li>
@@ -74,25 +112,46 @@
         <div class="wrapper">
           <section class="about_repair">
             <h3 class="heading">特定自主検査（特自検）とは</h3>
-            <p class="repair_text">建設機械、荷役運搬機械、高所作業車など、労働安全衛生法により特定自主検査が義務付けられており、検査は法令で定められた資格を有する検査者が、各機械ごとに定められた検査事項について実施して特定自主検査記録表へ記録・保管することになっています。</p>
-            <p class="repair_text">油圧ショベルやフォークリフトなど、特定の機械については1年以内に1回、一定の資格を持つ検査者が行う検査を受けなければなりません。</p>
-            <button class="btn official_page_btn" onclick="window.open('http://www.sacl.or.jp/inspection/')">特定自主検査制度の詳細はこちらから</button>
+            <p class="repair_text">
+              建設機械、荷役運搬機械、高所作業車など、労働安全衛生法により特定自主検査が義務付けられており、検査は法令で定められた資格を有する検査者が、各機械ごとに定められた検査事項について実施して特定自主検査記録表へ記録・保管することになっています。
+            </p>
+            <p class="repair_text">
+              油圧ショベルやフォークリフトなど、特定の機械については1年以内に1回、一定の資格を持つ検査者が行う検査を受けなければなりません。
+            </p>
+            <button
+              class="btn official_page_btn"
+              onclick="window.open('http://www.sacl.or.jp/inspection/')"
+            >
+              特定自主検査制度の詳細はこちらから
+            </button>
           </section>
           <section class="license">
             <h3 class="heading">検査資格</h3>
             <div class="license_inner flex">
-              <img src="./common/img/kmd_license.png" alt="" class="license_image">
+              <img
+                src="./common/img/kmd_license.png"
+                alt=""
+                class="license_image"
+              />
               <div class="license_text">
                 <p>特定自主検査では資格をもつ者の検査が必要です。</p>
                 <h4 class="license_list_title">事業内検査</h4>
                 <ul class="license_text_lists">
-                  <li class="license_text_list">厚生労働大臣が定める研修を修了した者</li>
-                  <li class="license_text_list">国家検定取得者等一定の資格のある者</li>
+                  <li class="license_text_list">
+                    厚生労働大臣が定める研修を修了した者
+                  </li>
+                  <li class="license_text_list">
+                    国家検定取得者等一定の資格のある者
+                  </li>
                 </ul>
                 <h4 class="license_list_title">検査業者検査</h4>
                 <ul class="license_text_lists">
-                  <li class="license_text_list">厚生労働大臣に登録した検査業者</li>
-                  <li class="license_text_list">都道府県労働局に登録した検査業者</li>
+                  <li class="license_text_list">
+                    厚生労働大臣に登録した検査業者
+                  </li>
+                  <li class="license_text_list">
+                    都道府県労働局に登録した検査業者
+                  </li>
                 </ul>
               </div>
             </div>
@@ -100,8 +159,14 @@
           <section class="sticker">
             <h3 class="heading">検査済標章（ステッカー）発行</h3>
             <div class="sticker_inner flex">
-              <img src="./common/img/sticker.png" alt="" class="sticker_image">
-              <p class="sticker_text">検査を済ませた機械には検査済標章を貼付しなければなりません。</p>
+              <img
+                src="./common/img/sticker_kmd.png"
+                alt=""
+                class="sticker_image"
+              />
+              <p class="sticker_text">
+                検査を済ませた機械には検査済標章を貼付しなければなりません。
+              </p>
             </div>
           </section>
           <section class="inspection_system">
@@ -117,7 +182,9 @@
                     </tr>
                     <tr class="inspection_table_row">
                       <th class="inspection_table_header">検査証</th>
-                      <td class="inspection_table_text">厚生労働省が認めた有資格者</td>
+                      <td class="inspection_table_text">
+                        厚生労働省が認めた有資格者
+                      </td>
                     </tr>
                     <tr class="inspection_table_row">
                       <th class="inspection_table_header">記録の保管期間</th>
@@ -138,7 +205,9 @@
                     </tr>
                     <tr class="inspection_table_row">
                       <th class="inspection_table_header">車両系建設機械</th>
-                      <td class="inspection_table_text">スキッドステアローダー、ショベル等</td>
+                      <td class="inspection_table_text">
+                        スキッドステアローダー、ショベル等
+                      </td>
                     </tr>
                   </tbody>
                 </table>
@@ -151,7 +220,9 @@
               <table class="price_table_inner">
                 <tbody class="price_table_body">
                   <tr class="price_table_row machine_name_container">
-                    <th class="machine_name" colspan="2">スキッドステアローダー</th>
+                    <th class="machine_name" colspan="2">
+                      スキッドステアローダー
+                    </th>
                   </tr>
                   <tr class="price_table_row">
                     <th class="price_table_header">バケット容量 0,26㎥以下</th>
@@ -176,7 +247,9 @@
               <table class="price_table_inner">
                 <tbody class="price_table_body">
                   <tr class="price_table_row machine_name_container">
-                    <th class="machine_name" colspan="2">ホイールローダー・トラクタショベル</th>
+                    <th class="machine_name" colspan="2">
+                      ホイールローダー・トラクタショベル
+                    </th>
                   </tr>
                   <tr class="price_table_row">
                     <th class="price_table_header">バケット容量 0,26㎥以下</th>
@@ -213,7 +286,9 @@
               <table class="price_table_inner">
                 <tbody class="price_table_body">
                   <tr class="price_table_row machine_name_container">
-                    <th class="machine_name" colspan="2">エンジン式フォークリフト</th>
+                    <th class="machine_name" colspan="2">
+                      エンジン式フォークリフト
+                    </th>
                   </tr>
                   <tr class="price_table_row">
                     <th class="price_table_header">1t未満</th>
@@ -258,7 +333,9 @@
               <table class="price_table_inner">
                 <tbody class="price_table_body">
                   <tr class="price_table_row machine_name_container">
-                    <th class="machine_name" colspan="2">バッテリー式フォークリフト（カウンタ）</th>
+                    <th class="machine_name" colspan="2">
+                      バッテリー式フォークリフト（カウンタ）
+                    </th>
                   </tr>
                   <tr class="price_table_row">
                     <th class="price_table_header">1t未満</th>
@@ -291,7 +368,9 @@
               <table class="price_table_inner">
                 <tbody class="price_table_body">
                   <tr class="price_table_row machine_name_container">
-                    <th class="machine_name" colspan="2">バッテリー式フォークリフト（リーチ）</th>
+                    <th class="machine_name" colspan="2">
+                      バッテリー式フォークリフト（リーチ）
+                    </th>
                   </tr>
                   <tr class="price_table_row">
                     <th class="price_table_header">1t未満</th>
