--- a/service.html
+++ b/service.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>九州機械開発株式会社｜事業内容</title>
+    <meta name="title" content="九州機械開発株式会社｜事業内容" />
+    <meta
+      name="description"
+      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="九州機械開発株式会社｜事業内容" />
+    <meta
+      property="og:description"
+      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="九州機械開発株式会社｜事業内容" />
+    <meta
+      property="twitter:description"
+      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
     <link rel="stylesheet" href="./common/style/reset.css" />
     <link rel="stylesheet" href="./common/style/common.css" />
     <link rel="stylesheet" href="./common/style/service.css" />
-    <title>九州機械開発 株式会社</title>
+    <link rel="icon" href="./common/img/favicon.ico">
   </head>
   <body>
     <header class="header">
@@ -41,12 +73,14 @@
         <nav class="global-nav">
           <ul class="global-nav__list">
             <li class="global-nav__item">
-              <a href="./index.html">ホーム</a></li>
+              <a href="./index.html">ホーム</a>
+            </li>
             <li class="global-nav__item">
               <a href="#">事業内容</a>
             </li>
             <li class="global-nav__item">
-              <a href="./news.html">新着情報</a></li>
+              <a href="./news.html">新着情報</a>
+            </li>
             <li class="global-nav__item">
               <a href="./company.html">会社概要</a>
             </li>
@@ -74,11 +108,11 @@
         <div class="wrapper">
           <section class="service_page_contents">
             <div class="service_detail flex">
-                <img
-                  class="service_detail_image"
-                  src="./common/img/service_bobcat.png"
-                  alt=""
-                />
+              <img
+                class="service_detail_image"
+                src="./common/img/service_bobcat.png"
+                alt=""
+              />
               <div class="service_detail_text">
                 <h3 class="service_detail_title">建設機械販売</h3>
                 <p class="service_detail_sentence">
@@ -90,11 +124,11 @@
               </div>
             </div>
             <div class="service_detail flex reverse">
-                <img
-                  class="service_detail_image repair_image"
-                  src="./common/img/service_repair.png"
-                  alt=""
-                />
+              <img
+                class="service_detail_image repair_image"
+                src="./common/img/service_repair.png"
+                alt=""
+              />
               <div class="service_detail_text">
                 <h3 class="service_detail_title">建機メンテナンス修理</h3>
                 <p class="service_detail_sentence">
@@ -107,11 +141,11 @@
               </div>
             </div>
             <div class="service_detail flex">
-                <img
-                  class="service_detail_image"
-                  src="./common/img/service_test.png"
-                  alt=""
-                />
+              <img
+                class="service_detail_image"
+                src="./common/img/service_test.png"
+                alt=""
+              />
               <div class="service_detail_text">
                 <h3 class="service_detail_title">特定自主検査・各種点検</h3>
                 <p class="service_detail_sentence">
@@ -120,7 +154,9 @@
                 <p class="service_detail_sentence">
                   また安心してフォークリフトをお使い頂けるように、万全の技術と設備でお客様の大切な車輌を保守し、点検・整備・検査を行っております。
                 </p>
-                <button class="btn" onclick="location.href='./repair.html'">特自検はこちらから</button>
+                <button class="btn" onclick="location.href='./repair.html'">
+                  特自検はこちらから
+                </button>
               </div>
             </div>
           </section>
@@ -163,4 +199,3 @@
     <script src="common/js/main.js"></script>
   </body>
 </html>
-
