--- a/tire.html
+++ b/tire.html
@@ -6,39 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
     <title>九州機械開発株式会社｜事業内容</title>
-    <meta name="title" content="九州機械開発株式会社｜事業内容" />
+    <meta name="title" content="九州機械開発株式会社｜各種タイヤ販売" />
     <meta
       name="description"
-      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+      content="九州機械開発株式会社は、全国向けにタイヤ販売を行なっております。皆様が最も身近に感じる乗用車やトラック・バスなどのタイヤ以外にも、農業機械用や建設機械用、産業車両用のタイヤも幅広く取り扱っております。"
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="九州機械開発株式会社｜事業内容" />
+    <meta property="og:title" content="九州機械開発株式会社｜各種タイヤ販売" />
     <meta
       property="og:description"
-      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+      content="九州機械開発株式会社は、全国向けにタイヤ販売を行なっております。皆様が最も身近に感じる乗用車やトラック・バスなどのタイヤ以外にも、農業機械用や建設機械用、産業車両用のタイヤも幅広く取り扱っております。"
     />
     <meta
-      property="og:image"
+      property="og:img"
       content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
     />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="summary_large_img" />
     <meta property="twitter:url" content="https://metatags.io/" />
-    <meta property="twitter:title" content="九州機械開発株式会社｜事業内容" />
+    <meta property="twitter:title" content="九州機械開発株式会社｜各種タイヤ販売" />
     <meta
       property="twitter:description"
-      content="九州機械開発株式会社は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、スキッドステアローダーの販売やメンテナンス修理、特定自主検査及び各種点検を行っております。"
+      content="九州機械開発株式会社は、全国向けにタイヤ販売を行なっております。皆様が最も身近に感じる乗用車やトラック・バスなどのタイヤ以外にも、農業機械用や建設機械用、産業車両用のタイヤも幅広く取り扱っております。"
     />
     <meta
-      property="twitter:image"
+      property="twitter:img"
       content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
     />
     <link rel="stylesheet" href="./common/style/reset.css" />
     <link rel="stylesheet" href="./common/style/common.css" />
-    <link rel="stylesheet" href="./common/style/service.css" />
+    <link rel="stylesheet" href="./common/style/tire.css" />
     <link rel="icon" href="./common/img/favicon.ico">
   </head>
   <body>
@@ -65,7 +65,7 @@
               <a href="./contact.html">お問い合わせ</a>
             </li>
             <li class="header_list">
-              <button class="gradation" onclick="location.href='./tire.html'">
+              <button class="gradation" onclick="location.href='#'">
                 <span class="large_text">タイヤ販売</span>はこちらから
               </button>
             </li>
@@ -107,60 +107,57 @@
     <main>
       <article>
         <div class="top_wrapper">
-          <h2 class="page_title">事業内容</h2>
+          <h2 class="page_title">各種タイヤ販売</h2>
         </div>
         <div class="wrapper">
-          <section class="service_page_contents">
-            <div class="service_detail flex">
-              <img
-                class="service_detail_image"
-                src="./common/img/service_bobcat.png"
-                alt=""
-              />
-              <div class="service_detail_text">
-                <h3 class="service_detail_title">建設機械販売</h3>
-                <p class="service_detail_sentence">
-                  九州機械開発は鹿児島県において、ボブキャット販売代理店・指定サービス工場として主に、畜産向けスキッドステアローダーを中心に取り扱っております。現在では、日立建機日本株式会社のホイールローダーの販売も行っております。またお客様のご要望に合わせた仕様に合わせたカスタマイズや、アタッチメント等もお届けしています。また中古機械買取、新車購入に伴う下取りも行っております。
-                </p>
-                <p class="service_detail_sentence">
-                  『地域密着』を徹底し、新車から機械の寿命までお客様にご満足いただけるサービスを提供いたします。
-                </p>
+          <section class="tire_page_contents">
+            <div class="flex">
+              <div class="tire_img_wrapper">
+                <img src="./common/img/tractor.jpg" alt="トラクターの写真" class="tire_img">
+              </div>
+              <div class="tire_text_wrapper">
+                <h3 class="tire_contents_title">農業機械用タイヤ</h3>
+                <p class="tire_contents_text">トラクターや耕運機、スピードスプレイヤーやマニアスプレッダーなどのタイヤを幅広く取り扱っております。</p>
+                <p class="tire_contents_text">環境、用途。使用頻度によって、適切なタイヤをご紹介させていただきます。</p>
+                <p class="tire_contents_text">国産メーカー(FALKEN・BS)をはじめ、海外メーカーも多数ございます。</p>
               </div>
             </div>
-            <div class="service_detail flex reverse">
-              <img
-                class="service_detail_image repair_image"
-                src="./common/img/service_repair.png"
-                alt=""
-              />
-              <div class="service_detail_text">
-                <h3 class="service_detail_title">建機メンテナンス修理</h3>
-                <p class="service_detail_sentence">
-                  九州機械開発では建設機械サービス・メンテナンスにおいて長年の技術の蓄積があり、確かな提案とサービスを保証いたします。
-                  お客様の機械を止めない事。最大限のコストパフォーマンスを生み出す事をお客様と一緒に考えます。
-                </p>
-                <p class="service_detail_sentence">
-                  日々のメンテナンスから万一の故障時における素早い対応、工場からフィールドサービスまでお客様の全てをバックアップいたします。
-                </p>
+          </section>
+          <section class="tire_page_contents">
+            <div class="flex">
+              <div class="tire_img_wrapper">
+                <img src="./common/img/loader.jpg" alt="ホイールローダーの写真" class="tire_img">
+              </div>
+              <div class="tire_text_wrapper">
+                <h3 class="tire_contents_title">建設機械用タイヤ</h3>
+                <p class="tire_contents_text">建設機械の中には、ボブキャット・ミニホイールローダーなどの小さいものから、大型ダンプ、ラフテレーンクレーン、アスファルトフィニッシャーなどの大型の車両もございます。</p>
+                <p class="tire_contents_text">同じ車両でも使用用途によって適したタイヤが存在します。</p>
+                <p class="tire_contents_text">弊社ではそれぞれに適したタイヤを多数取り扱っております。</p>
               </div>
             </div>
-            <div class="service_detail flex">
-              <img
-                class="service_detail_image"
-                src="./common/img/service_test.png"
-                alt=""
-              />
-              <div class="service_detail_text">
-                <h3 class="service_detail_title">特定自主検査・各種点検</h3>
-                <p class="service_detail_sentence">
-                  人間も定期健診が必要なように、日頃からのこまめな点検で大きな出費や故障を未然に防ぐことができます。当社では経験豊富なプロの整備士がお客様の経費削減に貢献させて頂きます。
-                </p>
-                <p class="service_detail_sentence">
-                  また安心してフォークリフトをお使い頂けるように、万全の技術と設備でお客様の大切な車輌を保守し、点検・整備・検査を行っております。
-                </p>
-                <button class="btn" onclick="location.href='./repair.html'">
-                  特自検はこちらから
-                </button>
+          </section>
+          <section class="tire_page_contents">
+            <div class="flex">
+              <div class="tire_img_wrapper">
+                <img src="./common/img/forklift.jpg" alt="フォークリフトの写真" class="tire_img">
+              </div>
+              <div class="tire_text_wrapper">
+                <h3 class="tire_contents_title">産業車両用タイヤ</h3>
+                <p class="tire_contents_text">弊社では、小型のフォークリフト用のタイヤから大型用のタイヤまで取り扱っております。</p>
+                <p class="tire_contents_text">空気入りのエアータイヤ、空気を入れないノーパンクタイヤも取り扱いございます。ノーパンクタイヤにつきましては、ご自身で組み付ける作業が難しいため、貸ホイールを付けて販売することも可能です。</p>
+                <p class="tire_contents_text">お問い合わせの際にはお申し付けくださいませ。</p>
+              </div>
+            </div>
+          </section>
+          <section class="tire_page_contents">
+            <div class="flex">
+              <div class="tire_img_wrapper">
+                <img src="./common/img/truck.jpg" alt="タイヤの写真" class="tire_img">
+              </div>
+              <div class="tire_text_wrapper">
+                <h3 class="tire_contents_title">乗用車・トラック・バス用タイヤ</h3>
+                <p class="tire_contents_text">10種類以上のタイヤメーカーからお客様のご予算・ご要望に合わせたタイヤをご紹介させていただきます。</p>
+                <p class="tire_contents_text">タイヤの情報等は全てタイヤの側面に刻印されておりますので、タイヤサイズをご確認後、お問い合わせくださいませ。</p>
               </div>
             </div>
           </section>
@@ -193,7 +190,7 @@
             <li class="footer_list"><a href="./news.html">新着情報</a></li>
             <li class="footer_list"><a href="./company.html">会社概要</a></li>
             <li class="footer_list"><a href="./repair.html">特定自主検査</a></li>
-            <li class="footer_list"><a href="./tire.html">各種タイヤ販売</a></li>
+            <li class="footer_list"><a href="#">各種タイヤ販売</a></li>
             <li class="footer_list">
               <a href="./contact.html">お問い合わせ</a>
             </li>
