--- a/repair.html
+++ b/repair.html
@@ -48,7 +48,7 @@
   <body>
     <header class="header">
       <div class="flex">
-        <a class="header_left flex">
+        <a class="header_left flex" href="./index.html">
           <img
             class="logo"
             src="./common/img/kmd_logo.png"
@@ -64,12 +64,13 @@
             <li class="header_list"><a href="./service.html">事業内容</a></li>
             <li class="header_list"><a href="./news.html">新着情報</a></li>
             <li class="header_list"><a href="./company.html">会社概要</a></li>
+            <li class="header_list"><a href="#">特定自主検査</a></li>
             <li class="header_list">
               <a href="./contact.html">お問い合わせ</a>
             </li>
             <li class="header_list">
-              <button class="gradation" onclick="location.href='#'">
-                <span class="large_text">特自検</span>はこちらから
+              <button class="gradation" onclick="location.href='./tire.html'">
+                <span class="large_text">タイヤ販売</span>はこちらから
               </button>
             </li>
           </ul>
@@ -90,6 +91,9 @@
             </li>
             <li class="global-nav__item">
               <a href="#">特定自主検査</a>
+            </li>
+            <li class="global-nav__item">
+              <a href="./tire.html">各種タイヤ販売</a>
             </li>
             <li class="global-nav__item">
               <a href="./contact.html">お問い合わせ</a>
@@ -420,6 +424,8 @@
             <li class="footer_list"><a href="./service.html">事業内容</a></li>
             <li class="footer_list"><a href="./news.html">新着情報</a></li>
             <li class="footer_list"><a href="./company.html">会社概要</a></li>
+            <li class="footer_list"><a href="#">特定自主検査</a></li>
+            <li class="footer_list"><a href="./tire.html">各種タイヤ販売</a></li>
             <li class="footer_list">
               <a href="./contact.html">お問い合わせ</a>
             </li>
